# git-profile

./: Cargo.toml  flake.nix  package.nix  shell.nix
src/: config.rs
