[package]
name = "gitprofile"
version = "0.1.3"
edition = "2021"
description = "A CLI tool to manage git profiles"
repository = "https://github.com/takuma7/git-profile/"
readme = "README.md"
license-file = "LICENSE.md"
keywords = ["git", "git-config", "git-profile", "productivity"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.56", features = ["derive"] }
dialoguer = "0.12.0"
directories = "6.0.0"
indexmap = { version = "1.9.3", features = ["serde"] }
lazy_static = "1.5.0"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_with = { version = "3.16.1", features = ["indexmap"] }
thiserror = "2.0.18"
toml = "0.9.11"

[dev-dependencies]
assert_cmd = "2.1.2"
predicates = "3.1.3"

[[bin]]
name = "git-profile"
path = "src/main.rs"
